{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 564,
  "lineage": "46aa38dd-5e50-0d13-234e-97627ab363a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ANSIBLE-KURS-IGW-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04e329c4628b3d134",
            "owner_id": "189571796651",
            "vpc_id": "vpc-062f4b6a92ba817d4"
          },
          "depends_on": [
            "aws_vpc.ANSIBLE-KURS-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ANSIBLE-KURS-ROUTETABLE-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b57f96f7c7fdc832",
            "owner_id": "189571796651",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e329c4628b3d134",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-062f4b6a92ba817d4"
          },
          "depends_on": [
            "aws_internet_gateway.ANSIBLE-KURS-IGW-1",
            "aws_vpc.ANSIBLE-KURS-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ANSIBLE-KURS-ROUTETABLEASSOC-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db31f11499a6dbef",
            "route_table_id": "rtb-0b57f96f7c7fdc832",
            "subnet_id": "subnet-0249007429a9c9b86"
          },
          "depends_on": [
            "aws_route_table.ANSIBLE-KURS-ROUTETABLE-1",
            "aws_subnet.ANSIBLE-KURS-SUBNET-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ANSIBLE-KURS-SG-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:189571796651:security-group/sg-08008a58624d5d8a0",
            "description": "Created with Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08008a58624d5d8a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ANSIBLE-KURS-SG-1",
            "name_prefix": null,
            "owner_id": "189571796651",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-062f4b6a92ba817d4"
          },
          "depends_on": [
            "aws_vpc.ANSIBLE-KURS-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ANSIBLE-KURS-SUBNET-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:189571796651:subnet/subnet-0249007429a9c9b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.150.0.0/24",
            "id": "subnet-0249007429a9c9b86",
            "map_public_ip_on_launch": false,
            "owner_id": "189571796651",
            "vpc_id": "vpc-062f4b6a92ba817d4"
          },
          "depends_on": [
            "aws_vpc.ANSIBLE-KURS-VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ANSIBLE-KURS-VPC-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:189571796651:vpc/vpc-062f4b6a92ba817d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.150.0.0/16",
            "default_network_acl_id": "acl-021eaba03b414bf0c",
            "default_route_table_id": "rtb-068dd4ce72958094d",
            "default_security_group_id": "sg-010eef1196737bef7",
            "dhcp_options_id": "dopt-5caba437",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-062f4b6a92ba817d4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068dd4ce72958094d",
            "owner_id": "189571796651"
          }
        }
      ]
    }
  ]
}